[gd_scene load_steps=9 format=2]

[ext_resource path="res://actors/items/fludd_box/pickup_hover.png" type="Texture" id=1]
[ext_resource path="res://actors/items/fludd_box/pickup_turbo.png" type="Texture" id=2]
[ext_resource path="res://actors/items/fludd_box/pickup_rocket.png" type="Texture" id=3]
[ext_resource path="res://actors/items/fludd_box/fludd_pickup.gd" type="Script" id=4]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 7.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 12.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.5, 10.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 7.5 )

[node name="FluddPickup" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 4 )

[node name="Hover" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Sprite" type="Sprite" parent="Hover"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hover"]
shape = SubResource( 1 )

[node name="Rocket" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="Sprite" type="Sprite" parent="Rocket"]
position = Vector2( 0, -5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rocket"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="Turbo" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="Sprite" type="Sprite" parent="Turbo"]
position = Vector2( 0, -3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turbo"]
position = Vector2( 0, -3 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
[connection signal="body_entered" from="Hover" to="." method="_on_Hover_body_entered"]
[connection signal="body_entered" from="Rocket" to="." method="_on_Rocket_body_entered"]
[connection signal="body_entered" from="Turbo" to="." method="_on_Turbo_body_entered"]
